@@ -31,7 +31,6 @@ import org.openrewrite.test.SourceSpec;
 import org.openrewrite.test.SourceSpecs;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.function.Consumer;
 import java.util.stream.Collectors;
@@ -563,14 +562,14 @@ class AddImportTest implements RewriteTest {
 
     @Test
     void importsAddedInAlphabeticalOrder() {
-        List<String> otherPackages = Arrays.asList("c", "c.c", "c.c.c");
+        List<String> otherPackages = List.of("c", "c.c", "c.c.c");
         List<SourceSpecs> otherImports = new ArrayList<>();
         for (int i = 0; i < otherPackages.size(); i++) {
             String pkg = otherPackages.get(i);
             otherImports.add(java("package " + pkg + ";\npublic class C" + i + " {}", SourceSpec::skip));
         }
 
-        List<String> packages = Arrays.asList("b", "c.b", "c.c.b");
+        List<String> packages = List.of("b", "c.b", "c.c.b");
         for (int order = 0; order < packages.size(); order++) {
             String pkg = packages.get(order);
 
@@ -818,7 +817,7 @@ class AddImportTest implements RewriteTest {
           spec -> spec.recipes(
             toRecipe(() -> new JavaIsoVisitor<>() {
                 @Override
-                public J.MethodInvocation visitMethodInvocation(J.MethodInvocation method, ExecutionContext executionContext) {
+                public J.MethodInvocation visitMethodInvocation(J.MethodInvocation method, ExecutionContext ctx) {
                     return method.withSelect(null);
                 }
             }),
@@ -858,8 +857,8 @@ class AddImportTest implements RewriteTest {
         rewriteRun(
           spec -> spec.recipe(toRecipe(() -> new JavaIsoVisitor<>() {
               @Override
-              public J.MethodDeclaration visitMethodDeclaration(J.MethodDeclaration method, ExecutionContext executionContext) {
-                  method = super.visitMethodDeclaration(method, executionContext);
+              public J.MethodDeclaration visitMethodDeclaration(J.MethodDeclaration method, ExecutionContext ctx) {
+                  method = super.visitMethodDeclaration(method, ctx);
                   method = JavaTemplate.builder("List<Builder> list = new ArrayList<>();")
                     .imports("java.util.ArrayList", "java.util.List")
                     .staticImports("java.util.Calendar.Builder")
@@ -916,7 +915,7 @@ class AddImportTest implements RewriteTest {
           spec -> spec.recipes(
             toRecipe(() -> new JavaIsoVisitor<>() {
                 @Override
-                public J.MethodInvocation visitMethodInvocation(J.MethodInvocation method, ExecutionContext executionContext) {
+                public J.MethodInvocation visitMethodInvocation(J.MethodInvocation method, ExecutionContext ctx) {
                     if (method.getName().getSimpleName().equals("emptyList")) {
                         return method.withSelect(null);
                     }
